--- a/Lab1/task2/makefile
+++ b/Lab1/task2/makefile
@@ -1,11 +1,11 @@
 # set this variable to the director in which you saved the common files
 commondir = ../common/
 
-all : lab1-2
+all : lab1-2.out
 
-lab1-2 : lab1-2.c $(commondir)GL_utilities.c $(commondir)VectorUtils3.c $(commondir)LittleOBJLoader.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c
-	gcc -Wall -o lab1-2 -I$(commondir) -I../common/Linux -DGL_GLEXT_PROTOTYPES lab1-2.c $(commondir)GL_utilities.c $(commondir)LittleOBJLoader.c $(commondir)VectorUtils3.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c -lXt -lX11 -lGL -lm
+lab1-2.out : lab1-2.c $(commondir)GL_utilities.c $(commondir)VectorUtils3.c $(commondir)LittleOBJLoader.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c
+	gcc -Wall -o lab1-2.out -I$(commondir) -I../common/Linux -DGL_GLEXT_PROTOTYPES lab1-2.c $(commondir)GL_utilities.c $(commondir)LittleOBJLoader.c $(commondir)VectorUtils3.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c -lXt -lX11 -lGL -lm
 
 clean :
-	rm lab1-2
+	rm lab1-2.out
 
