--- a/Lab1/task4/makefile
+++ b/Lab1/task4/makefile
@@ -1,10 +1,10 @@
 # set this variable to the director in which you saved the common files
 commondir = ../common/
 
-all : lab1-4
+all : lab1-4.out
 
-lab1-4 : lab1-4.c $(commondir)GL_utilities.c $(commondir)VectorUtils3.c $(commondir)LittleOBJLoader.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c
-	gcc -Wall -o lab1-4 -I$(commondir) -I../common/Linux -DGL_GLEXT_PROTOTYPES lab1-4.c $(commondir)GL_utilities.c $(commondir)LittleOBJLoader.c $(commondir)VectorUtils3.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c -lXt -lX11 -lGL -lm
+lab1-4.out : lab1-4.c $(commondir)GL_utilities.c $(commondir)VectorUtils3.c $(commondir)LittleOBJLoader.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c
+	gcc -Wall -o lab1-4.out -I$(commondir) -I../common/Linux -DGL_GLEXT_PROTOTYPES lab1-4.c $(commondir)GL_utilities.c $(commondir)LittleOBJLoader.c $(commondir)VectorUtils3.c $(commondir)LoadTGA.c $(commondir)Linux/MicroGlut.c -lXt -lX11 -lGL -lm
 
 clean :
-	rm lab1-4
+	rm lab1-4.out
